<resources>
    <string name="app_name">Trackids</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_parent_email">Parent\'s email (for child)</string>
    <string name="sign_up">Sign Up</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_sign_in">Sign In</string>
    <string name="welcome">Welcome to Trackids</string>
    <string name="hint_password_confirmation">Password confirmation</string>
    <string name="fetch_location">Fetch Location </string>
    <string name="app_slogan">Keep Your Children in Your Hands</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_child">Select Child</string>
    <string name="label_select_child">Select Child</string>
    <string name="switch_child">Switch Child</string>
    <string name="profile">Profile</string>
    <string name="track_location">Track Location</string>
    <string name="share_location">Share Location</string>
    <string name="image_satelit">Satelit</string>
    <string name="start_tracking">Show in Map </string>
    <string name="title_activity_main2">Location Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_messenger">Messenger</string>
</resources>
